fixing index.html overflow issue & spacing issue on about section

--- a/style.css
+++ b/style.css
@@ -26,3 +26,18 @@ footer a {
 footer a:hover {
   color: white;
 }
+
+.carousel-item,
+.carousel-inner,
+.carousel-inner img {
+  height: 100%;
+  width: auto;
+}
+
+.carousel-item {
+  text-align: center;
+}
+
+.carousel {
+  height: 75vh;
+}
